--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <h1>PreEntrega 1</h1>
     
-    <div id="player1"></div>
-
+    <div class="background">
+      <div id="player"></div>
+    </div>
     <script src="./js/index.js"></script>
   </body>
 </html>
