--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Game Demo</title>
   </head>
   <body>
-    <h1>PreEntrega 1</h1>
-    
-    <div class="background">
-      <div id="player"></div>
+    <h1>This is a Game</h1>
+    <p class="playerName"></p>
+
+    <!--Start and Instructions buttons-->
+    <div class="d-grid gap-2 col-6 mx-auto">
+      <button type="button" id="startBtn" class="btn btn-outline-dark btn-lg">Start</button>
     </div>
-    <script src="./js/index.js"></script>
+    <div class="d-grid gap-2 col-6 mx-auto">
+      <button type="button" id="instructionsBtn" class="btn btn-outline-secondary btn-lg">Instructions</button>
+    </div>
+
+    <!--Player and Coins images-->
+    <div class="player">
+      <img id="player"  height = 100 src="./img/sunflower-player.png"> 
+    </div>
+    <div class="coins">
+      <img id="coins" height = 40 src="./img/coin2.png">
+    </div>
+    <p>Time left: <span max="10" id="remainingTime">10</span> seconds.</p>
+
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
