--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <!--Player and Coins images-->
     <div class="player">
-      <img id="player"  height = 100 src="./img/sunflower-player.png"> 
+      <img id="player"  height = 100 src="./public/img/sunflower-player.png"> 
     </div>
     <div class="coins">
-      <img id="coins" height = 40 src="./img/coin2.png">
+      <img id="coins" height = 40 src="./public/img/coin2.png">
     </div>
     <p>Time left: <span max="10" id="remainingTime">10</span> seconds.</p>
 
