sweetalert fix try2

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <p>Time left: <span max="10" id="remainingTime">10</span> seconds.</p>
 
     <script type="module" src="./js/index.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
   </body>
 </html>
